# term_video

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
dep/: CMakeLists.txt
term_video/: CMakeLists.txt
term_video/code/: main.cpp
